# wasmer-js

./: .babelrc  .gitattributes  .gitignore  .gitmodules  .prettierignore  .prettierrc  .travis.yml  3p-modules.d.ts  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md  WasmerSDK.ts  WasmerSDKBundled.ts  azure-pipelines.yaml  azure-pipelines.yml  code-of-conduct.md  common.ts  index.html  jest.config.js  lerna.json  lib.js  lib.ts  lib_bundled.ts  modules.html  package-lock.json  package.json  pnpm-lock.yaml  rollup.config.js  rollup.config.mjs  rollup.config.ts  rollup.lib.js  rollup.wapm-shell.js  rollup.worker.js  rust-toolchain.toml  test.ts  tsconfig.json  tslint.json  typedoc.json  wasi.ts  (+3 more)
.cargo/: config.toml
.github/release-please/: config.json  manifest.json
.github/workflows/: ci.yml  release-please.yml
.parcel-cache/: 1ba6b0788801943b  1f91fab674e55cf1  2872ead3c955face  47cb0478f3aaec0f  8ffe8ece2f3af09e.txt  a77bbee702a41b7e  b66df9c5520be78c  data.mdb  fbccdf9e4afdd61a.txt  lock.mdb
assets/: highlight.css  navigation.js  search.js
classes/: Atom.html  Command.html  DeployedApp.html  Directory.html  Instance.html  IntoUnderlyingByteSource.html  IntoUnderlyingSink.html  IntoUnderlyingSource.html  PublishPackageOutput.html  Runtime.html  User.html  UserPackageDefinition.html  Volume.html  Wasmer.html  WasmerPackage.html
crates/wasi_js_transformer/: .gitignore  Cargo.toml  wapm_shell_build.sh
crates/wasm_transformer/: .gitignore  Cargo.toml  README.md  wasm_transformer_build.sh
crates/wasm_transformer/src/: applier.rs  lib.rs  macros.rs  parser.rs  transformer.rs  utils.rs
crates/wasm_transformer/wasm_module_examples/: busy.wasm  busy_original.wasm  busy_original.wat  busy_trans.wasm  busy_trans.wat  clock_time_get_lowered.wat  io-as-debug.wasm  path_open.wat  rsign.wasm  rsign2.wasm  rsign_original.wasm  sqlite.wasm  two-imports.wat  uutils.wasm  wasmboy-wasmer.wasm
crates/wasm_transformer/wasm_module_examples/gettimeofday/: gettimeofday
crates/wasm_transformer/wasm_module_examples_transformed/: busy.wasm  busy_original.wasm  clock_time_get.wasm  duk.wasm  gettimeofday.wasm  io-as-debug.wasm  matrix.wasm  path_open.wasm  qjs.wasm  rsign_original.wasm  viu.wasm  wasmboy-wasmer.wasm
docs/: typedoc.json  wasmer.toml
e2e-tests/: .gitignore  package-lock.json  package.json
e2e-tests/test/: cli.js  io-devices.js  test.js  util.js  wasi.js  wasm-terminal.js  wasm-transformer.js  wasmfs.js
examples/cdn/: README.md  index.html
examples/cdn-coi-serviceworker/: README.md  coi-serviceworker.js  index.html
examples/clang-cdn/: README.md  index.html  wasmer.toml
examples/clang-vite-app-stdout/: .gitignore  README.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.js
examples/deno/: README.md  example.ts  fs.ts  helloworld.ts
examples/deploy-node/: README.md  deploy-js.mjs  deploy-php.mjs  deploy-static.mjs  index-php.mjs  index.mjs  package.json
examples/deploy-web/: app.yaml  next.config.mjs  package-lock.json  package.json  pnpm-lock.yaml  tailwind.config.ts  wasmer.toml
examples/ffmpeg-react/: .eslintrc.cjs  README.md  app.yaml  index.html  package-lock.json  package.json  pnpm-lock.yaml  tailwind.config.js  tsconfig.json  vite.config.ts  wasmer.toml
examples/file-system/: file-system.ts  index.ts
examples/markdown-editor/: README.md  index.html  index.ts  package-lock.json  package.json  style.css  tsconfig.json  vite.config.js
examples/markdown-editor-improved/: README.md  index.ts  package-lock.json  package.json  vite.config.js
examples/node/: README.md  example.mjs  fs.mjs  gettimeofday-lowered.wasm  helloworld.mjs  index.js  package.json  qjs-lowered.wasm
examples/node-stubbed/: index.js
examples/serviceworker/: package.json  pnpm-lock.yaml
examples/simplimage/: NOTES.md  index.html  index.tsx  package-lock.json  package.json  pnpm-lock.yaml  vite.config.ts
examples/wasm_transformer_cli/: .gitignore  Cargo.toml  README.md  run.sh
examples/wasm_transformer_cli/src/: main.rs
examples/web/: fs.js  (+4 more)
functions/: init.html  initSync.html  initializeLogger.html  runWasix.html  setDefaultWorkerUrl.html  setRegistry.html  setWorkerUrl.html  wat2wasm.html
interfaces/: InitOutput.html
js/: worker.js
lib/: 3p-modules.d.ts  constants.ts  index.ts  shell-parse.d.ts  wasi.ts
old/: package-lock.json  rollup.config.ts  tsconfig.json  tslint.json
pkg/: .gitignore  wasmer_wasi_js.d.ts  wasmer_wasi_js.js  wasmer_wasi_js_bg.wasm  wasmer_wasi_js_bg.wasm.d.ts  wasmer_wasix_js.d.ts  wasmer_wasix_js.js  wasmer_wasix_js_bg.wasm  wasmer_wasix_js_bg.wasm.d.ts
sdk-lite/: .gitignore  .graphqlconfigx  build.js  bundle.js  package.json  pnpm-lock.yaml  relay.config.js  rollup.config.mjs  schema.graphql  tsconfig.json  tsconfig.tsbuildinfo
src/: common.rs  constants.ts  container.rs  facade.rs  fs.rs  http_listener_networking.rs  index.ts  instance.rs  io.rs  js_runtime.rs  lib.rs  logging.rs  mem_fs.rs  module_cache.rs  net.rs  options.rs  package_loader.rs  polyfills.ts  pool.rs  run.rs  runtime.rs  shell-parse.d.ts  streams.rs  term.tsx  tty.rs  utils.rs  wasi.rs  wasi.ts  wasmer.rs  webassembly.d.ts  ws.rs
src-js/: WasmerSDK.ts  WasmerSDKBundled.ts  index.ts  node.ts  unpkg.ts  wasm-inlined.ts  worker.js
static/: index.tsx
test/: hrtime.bigint.test.ts  wasmer-wasi.test.ts
tests/: demo.wat  directory.test.ts  index.spec.js  index.spec.js.bak  integration.test.ts  registry.test.ts  run.spec.js  run.test.ts  test.wasm
tools/: gh-pages-publish.ts
tools/wasi-js-transformer/old/: .gitignore  Cargo.toml
tools/wasi-js-transformer/old/src/: main.rs  main2.rs  main3.rs  pre.wat
types/: AppConfig.html  AppIdentifier.html  BaseAppConfig.html  CommonOptions.html  DeployedIdApp.html  DirEntry.html  DirectoryInit.html  InitInput.html  NamedApp.html  Output.html  PackageCommand.html  PackageManifest.html  RunOptions.html  RuntimeOptions.html  SpawnOptions.html  SyncInitInput.html  VolumeFile.html  VolumeFileData.html  VolumeFileDate.html  VolumeTree.html  WasmerInitInput.html  WasmerRegistryConfig.html
(+197 files in other folders)
