[package]
name = "wasmer-js"
version = "0.0.0"
authors = ["Syrus Akbary <syrus@wasmer.io>"]
edition = "2021"
publish = false

[lib]
crate-type = ["cdylib"]

[dependencies]
lazy_static = "1.5"
anyhow = "1"
async-trait = "0.1"
bincode = "1"
bytes = "1"
console_error_panic_hook = { version = "0.1" }
derivative = { version = "2" }
futures = "0.3"
instant = { version = "0.1", features = ["wasm-bindgen"] }
js-sys = "0.3"
once_cell = "1"
reqwest = { version = "0.12.7", features = ["stream"] }
serde = { version = "1", features = ["derive"] }
serde-wasm-bindgen = "0.6"
sha2 = "0.10.8"
tempfile = "3.10.1"
tokio = { version = "1", features = ["sync"], default-features = false }
toml = "0.8.14"
tracing = { version = "0.1", features = ["log", "release_max_level_debug"] }
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
url = "2.4.0"
wasm-bindgen = { version = "=0.2.92" }
wasm-bindgen-derive = "0.2.1"
wasm-bindgen-futures = "0.4.40"
wasm-bindgen-test = "0.3.40"
# virtual-fs = { version = "0.17.0", default-features = false }
# virtual-net = { version = "0.9.0", default-features = false, features = [
#     "remote",
# ] }
# wasmer = { version = "4.4.0", default-features = false, features = [
#     "js",
#     "js-default",
#     "wasm-types-polyfill",
#     "enable-serde",
# ] }
# wasmer-api = { version = "0.1.0" }
# wasmer-config = "0.9.0"
# wasmer-types = "4.4.0"
# wasmer-wasix = { version = "0.28.0", default-features = false, features = [
#     "js",
#     "js-default",
# ] }
webc = "9.0.0"

virtual-fs = { path = "../wasmer/lib/virtual-fs", default-features = false }
virtual-net = { path = "../wasmer/lib/virtual-net", default-features = false, features = [
    "remote",
] }
wasmer = { path = "../wasmer/lib/api", default-features = false, features = [
    "js",
    "js-default",
    "wasm-types-polyfill",
    "enable-serde",
] }
wasmer-backend-api = { path = "../wasmer/lib/backend-api", default-features = false, features = [
    "js",
] }
wasmer-config = { path = "../wasmer/lib/config" }
wasmer-package = { path = "../wasmer/lib/package" }
wasmer-types = { path = "../wasmer/lib/types" }
wasmer-wasix = { path = "../wasmer/lib/wasix", default-features = false, features = [
    "js",
    "js-default",
] }
# webc = { path = "../pirita/crates/webc" }

[dependencies.web-sys]
version = "0.3"
features = [
    "BinaryType",
    "Blob",
    "BlobPropertyBag",
    "console",
    "DedicatedWorkerGlobalScope",
    "DomException",
    "ErrorEvent",
    "File",
    "FileReader",
    "FileSystemDirectoryHandle",
    "FileSystemFileHandle",
    "FileSystemGetDirectoryOptions",
    "FileSystemHandle",
    "Headers",
    "MessageEvent",
    "Navigator",
    "ProgressEvent",
    "QueuingStrategy",
    "ReadableByteStreamController",
    "ReadableStream",
    "ReadableStreamDefaultController",
    "ReadableStreamDefaultReader",
    "Request",
    "RequestInit",
    "RequestMode",
    "Response",
    "StorageManager",
    "Url",
    "WebSocket",
    "Window",
    "Worker",
    "WorkerGlobalScope",
    "WorkerNavigator",
    "WorkerOptions",
    "WorkerType",
    "WritableStream",
    "WritableStreamDefaultController",
    "WritableStreamDefaultWriter",
]

[dev-dependencies]
wasm-bindgen-test = "0.3"

[profile.release]
lto = true
opt-level = 'z'

[package.metadata.wasm-pack.profile.release.wasm-bindgen]
debug-js-glue = false
demangle-name-section = false
dwarf-debug-info = false

[package.metadata.wasm-pack.profile.release]
wasm-opt = ["--enable-threads", "--enable-bulk-memory", "-Oz"]

[patch.crates-io]
#webc = {git = "https://github.com/wasmerio/pirita", branch = "in-memory-manifest"}
#virtual-net = { git = "https://github.com/wasmerio/wasmer", branch = "master" }
#virtual-fs = { git = "https://github.com/wasmerio/wasmer", branch = "master" }
#wasmer-wasix = { git = "https://github.com/wasmerio/wasmer", branch = "master" }
#wasmer = { git = "https://github.com/wasmerio/wasmer", branch = "master" }
# webc = { path = "../pirita/crates/webc" }
# virtual-net = { path = "../wasmer/lib/virtual-net" }
# virtual-fs = { path = "../wasmer/lib/virtual-fs" }
# wasmer-wasix = { path = "../wasmer/lib/wasix" }
# wasmer = { path = "../wasmer/lib/api" }
# wasmer-backend-api = { path = "../wasmer/lib/backend-api" }
# wasmer-config = { path = "../wasmer/lib/config" }
# wasmer-types = { path = "../wasmer/lib/types" }
