[package]
name = "wasm_transformer_cli"
version = "0.0.1"
authors = ["Aaron Turner <aaron@aaronthedev.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wasm_transformer = { path = "../../crates/wasm_transformer" }
clap = "2.33.0"
