[package]
name = "transformer"
version = "0.1.0"
authors = ["Syrus <me@syrusakbary.com>"]
edition = "2018"

[profile.release]
lto = true
opt-level = 's'

[dependencies]
# wasmparser = {version = "0.31.0", features=[]}
wee_alloc = "0.4.4"
# nom = "5.0.0"
# wasm-bindgen = "0.2.47"
# hashmap_core = "0.1.10"

[dependencies.wasmparser]
# path = "./wasmparser.rs"
version = "0.31.1"
# default-features = false
# features = ["core"]

# [dependencies.wasm-bindgen]
# # path = "./wasmparser.rs"
# version = "0.2.47"
# default-features = false
# features = []

[dev_dependencies]
wabt = "0.7.4"
